--- a/trunk/x10.man/paper/impl.tex
+++ b/trunk/x10.man/paper/impl.tex
@@ -4,12 +4,10 @@
 %the implementation.
 
 The \Xten{} compiler provides a framework for writing and
-checking constrained types.  The \Xten{} 
-language, 
-constraints in \Xten{} are conjunctions of equalities over immutable
+checking constrained types.  
+Constraints in \Xten{} are conjunctions of equalities over immutable
 side-effect-free expressions.  Compiler plugins may be installed
-that support other constraint languages, Presburger
-constraints (linear inequalities)~\cite{??}.
+that support other constraint languages and solvers.
 
 The \Xten{} compiler is implemented as an extension of
 Java using the Polyglot compiler framework~\cite{ncm03}.
