--- a/trunk/x10.man/paper/defs.sty
+++ b/trunk/x10.man/paper/defs.sty
@@ -51,11 +51,11 @@
 
 \newcommand{\starderives}{\derives^*}
 
-\newcommand\rn[1]{\textsc{#1}}
+% \newcommand\rn[1]{\textsc{#1}}
 \def\from#1\infer#2{{{\textstyle #1}\over{\textstyle #2}}}
 \def\axname#1\axiom#2{{\textstyle #2}{\ \textstyle(\mbox{\rn{#1})}}}
 \def\rname#1\from#2\infer#3{{{\textstyle #2}\over{\textstyle #3}}{\ \textstyle(\mbox{\rn{#1}})}}
-\def\derives{\longrightarrow}
+\def\derives{\rightarrow}
 \def\subtype{\sqsubseteq}
 
 \def\super{\mbox{\tt super}}
